--- a/simplernn.ipynb
+++ b/simplernn.ipynb
@@ -1582,7 +1582,7 @@
    ],
    "source": [
     "## Save model file\n",
-    "model.save('simple_rnn_imdb.h5')"
+    "model.save('simple_rnn_imdb.keras')"
    ]
   },
   {
