--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -464,7 +464,9 @@
     }
    ],
    "source": [
-    "model.predict(embedded_docs)"
+    "# Model predictions on all the padded input documents
+predictions = model.predict(embedded_docs)
+print("Predictions on Embedded Docs:\n", predictions)"
    ]
   },
   {
@@ -484,7 +486,8 @@
     }
    ],
    "source": [
-    "embedded_docs[0]"
+    "# Display embedded representation of the first document
+print("Embedded Representation of the First Document:", embedded_docs[0])"
    ]
   },
   {
@@ -527,7 +530,10 @@
     }
    ],
    "source": [
-    "model.predict(embedded_docs[0])"
+    "# Predict the embedding representation of the first document
+# Ensure the input is 2D
+prediction_for_first_doc = model.predict(embedded_docs[0].reshape(1, -1))
+print("Prediction for the First Document:", prediction_for_first_doc)"
    ]
   },
   {
